--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -355,7 +355,7 @@
                     <li><a href="#">บุคคลกร</a></li>
                     <li><a href="@Url.Action("IndexUser", "Projects")">ผลงานนักศึกษา</a></li>
                     <li><a href="#">หลักสูตรสาขา</a></li>
-                    <li><a href="#">หลักสูตรอบรม</a></li>
+                    <li><a href="@Url.Action("Index", "Generations")">หลักสูตรอบรม</a></li>
                     <li><a href="#">ประชาสัมพันธ์</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
                 </ul>
