--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -102,14 +102,14 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                    <li><a target="_blank" href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
                                     <li>
-                                        <a href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
+                                        <a target="_blank" href="@Url.Action("ShowPdf", "Projects")?id=@item.Pj_ID">
                                             รูปเล่ม
                                             <span class="pull-right badge bg-aqua">เข้าชม</span>
                                         </a>
                                     </li>
-                                    <li><a href="@item.Pj_Video">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
+                                    <li><a target="_blank" href="@item.Pj_Video">วีดีโอ<span class="pull-right badge bg-green">เข้าชม</span></a></li>
                                 </ul>
                             </div>
                         </div>
