--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -26,7 +26,7 @@
                     i++;
                     var active = i == 1 ? "active" : "";
                     <div class="item @active">
-                        <img src="~/imgSlideShow/@item.Pic_Img" style="width: 900px; height: 600px;" />
+                        <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%" />
                     </div>
                 }
             </div>
