--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/9738106a36.js" crossorigin="anonymous"></script>
     <style>
         * {
             font-family: 'Kanit', sans-serif;
@@ -200,9 +201,8 @@
             resize: none;
         }
     </style>
-
-    <script src="https://kit.fontawesome.com/9738106a36.js" crossorigin="anonymous"></script>
 </head>
+
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="header">
         <div class="row">
@@ -225,7 +225,7 @@
 
             <div class="modal-content modal-md">
                 <div class="modal-header modal-md text-center" style="background-color: cornflowerblue;">
-                    @*<img src="~/img/cs1.png" height="100" width="150" />*@
+                    <img src="~/img/com.png" height="100" width="150" />
                     <a style="font-size: 25px; color: white">ระบบจัดการข้อมูลสาขาวิทยาการคอมพิวเตอร์</a>
                 </div>
                 <div class="modal-c-tabs">
